--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+name: Our CI
 on:
   pull_request:
   push:
@@ -5,6 +6,15 @@ on:
 
 jobs:
   test:
+    name: Run tests
     runs-on:ubuntu-latest
-    step:
+    steps:
       - run: echo Hello World
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      -run: python -m pip install .[test]
+      -name: Run test
+      -run: python -m pytest
+      
