--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,21 @@ on:
 jobs:
   test:
     name: Run tests
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.8", "3.12"]
+        include:
+          - os: macos-14
+            python-version: "3.9"
+    runs-on: ${{ matrix.os }}
     steps:
       - run: echo Hello World
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Install python
+        uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: ${{ matrix.python-version }}
       - run: python -m pip install .[test]
       - name: Run test
       - run: python -m pytest
