--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - run: echo Hello World
+      - name: checkout v4
       - uses: actions/checkout@v4
       - name: Install python
         uses: actions/setup-python@v5
