--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,6 @@ jobs:
             python-version: "3.9"
     runs-on: ${{ matrix.os }}
     steps:
-      - run: echo Hello World
-      - name: checkout v4
       - uses: actions/checkout@v4
       - name: Install python
         uses: actions/setup-python@v5
@@ -25,5 +23,5 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - run: python -m pip install .[test]
       - name: Run test
-      - run: python -m pytest
+        run: python -m pytest
       
