--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,15 @@ jobs:
             python-version: "3.9"
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Install python
-        uses: actions/setup-python@v5
+      - name: checkout repo
+        uses: actions/checkout@v4
+          
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
-      - run: python -m pip install .[test]
-      - name: Run test
-        run: python -m pytest
-      
+          python-version: "3.11"
+            
+      - name: Install markdown slides
+        run: pip install git+https://gitlab.com/da_doomer/markdown-slides.git
+      - name: Generate slides
+        run: mdslides slides.md --output_dir slides
